# spaceview

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
scripts/: setup-port.js  tauri-dev.js
src/: App.tsx  CleanableFilesPanel.tsx  ComparePanel.test.tsx  ComparePanel.tsx  DuplicatesPanel.tsx  FilePreviewPanel.tsx  FileTypeChart.tsx  LargeFilesPanel.tsx  OnboardingGuide.tsx  ScanComparePanel.tsx  SettingsPanel.tsx  ThemeSwitcher.tsx  main.tsx  styles.css  themes.ts  treemap.test.ts  treemap.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  cleanable.rs  compare.rs  duplicates.rs  favorites.rs  lib.rs  main.rs  scanner.rs  settings.rs  snapshot.rs
src/components/: Breadcrumb.tsx  ContextMenu.tsx  DiskOverview.tsx  KeyboardShortcutsPanel.tsx  ListView.tsx  ScanPerformanceStats.tsx  ScanningProgress.tsx  StatusBar.tsx  Toolbar.tsx  TreemapCells.tsx  WelcomeScreen.tsx  index.ts
src/contexts/: ErrorNotificationContext.tsx  SettingsContext.tsx  index.ts
src/hooks/: index.ts  useVirtualizedRects.ts
