[package]
name = "spaceview"
version = "1.0.0"
description = "High-performance disk space analyzer"
authors = ["SpaceView"]
edition = "2021"
default-run = "spaceview"

[lib]
name = "spaceview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# High-performance file walking (ripgrep-style)
ignore = "0.4"          # ripgrep's parallel walker with work-stealing
jwalk = "0.8"           # backup parallel walker
rayon = "1.10"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8" # work-stealing queues
num_cpus = "1.16"
parking_lot = "0.12"    # faster mutex/rwlock
dashmap = "6"           # lock-free concurrent hashmap
trash = "5"             # safe cross-platform trash operations

# Caching
bincode = "1.3"         # fast binary serialization
dirs = "5"              # platform-specific directories
sha2 = "0.10"           # hash for cache keys
base64 = "0.22"         # base64 encoding for file preview

# Async runtime
tokio = { version = "1", features = ["full"] }

# macOS specific APIs for optimal performance
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
